--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  display: grid;
+  place-items: center;
+  height: fit-content;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.board {
+  position: relative;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.tile {
+  position: absolute;
+  list-style: none;
+  background: #ffffff;
+  display: grid;
+  place-items: center;
+  font-size: 16px;
+}
+
+.hole {
+  opacity: 0;
+}
+
+button {
+  display:block;
 }
